# fastapi-cinema-project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  pyproject.toml
.github/workflows/: cd-pipeline.yml
alembic/: env.py
app/: main.py
app/config/: dependencies.py
app/database/: populate.py  session_postgresql.py
app/database/models/: accounts.py
app/schemas/: accounts.py
commands/: deploy.sh  run_migration.sh
configs/nginx/: nginx.conf
docker/mailhog/: Dockerfile
docker/nginx/: .env.sample
docker/tests/: Dockerfile
src/: main.py
src/config/: dependencies.py  settings.py
src/database/: __init__.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/models/: accounts.py  movies.py
src/exceptions/: __init__.py
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
src/routers/: __init__.py  accounts.py  movies.py  profiles.py
src/schemas/: __init__.py  profiles.py
src/security/: token_manager.py
src/storages/: __init__.py  s3.py
src/tests/: confest.py
src/tests/doubles/fakes/: storage.py
src/tests/doubles/stubs/: emails.py
src/tests/test_e2e/: test_email_notification.py  test_storage.py
src/tests/test_integration/: test_accounts.py  test_movies.py  test_profiles.py
src/validation/: __init__.py
