[tool.poetry]
name = "fastapi-cinema-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.13.1"
python-multipart = "^0.0.22"
celery = "^5.6.2"
redis = "^7.3.0"
stripe = "^14.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
